y.output
Terminals unused in grammar

   CONSTANT
   STRING_LITERAL
   SIZEOF
   PTR_OP
   TYPE_NAME
   '?'


Grammar

    0 $accept: Program $end

    1 Program: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | TRUE
    4                   | FALSE
    5                   | CONSTANT_INT
    6                   | CONSTANT_DOUBLE
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list ',' assignment_expression

   16 unary_expression: postfix_expression
   17                 | INC_OP unary_expression
   18                 | DEC_OP unary_expression
   19                 | unary_operator unary_expression

   20 unary_operator: '+'
   21               | '-'
   22               | '~'
   23               | '!'
   24               | '$'

   25 multiplicative_expression: unary_expression
   26                          | multiplicative_expression '*' unary_expression
   27                          | multiplicative_expression '/' unary_expression
   28                          | multiplicative_expression '%' unary_expression

   29 additive_expression: multiplicative_expression
   30                    | additive_expression '+' multiplicative_expression
   31                    | additive_expression '-' multiplicative_expression

   32 shift_expression: additive_expression
   33                 | shift_expression LEFT_OP additive_expression
   34                 | shift_expression RIGHT_OP additive_expression

   35 relational_expression: shift_expression
   36                      | relational_expression '<' shift_expression
   37                      | relational_expression '>' shift_expression
   38                      | relational_expression LE_OP shift_expression
   39                      | relational_expression GE_OP shift_expression

   40 equality_expression: relational_expression
   41                    | equality_expression EQ_OP relational_expression
   42                    | equality_expression NE_OP relational_expression

   43 and_expression: equality_expression
   44               | and_expression '&' equality_expression

   45 exclusive_or_expression: and_expression
   46                        | exclusive_or_expression '^' and_expression

   47 inclusive_or_expression: exclusive_or_expression
   48                        | inclusive_or_expression '|' exclusive_or_expression

   49 logical_and_expression: inclusive_or_expression
   50                       | logical_and_expression AND_OP inclusive_or_expression

   51 logical_or_expression: logical_and_expression
   52                      | logical_or_expression OR_OP logical_and_expression

   53 assignment_expression: logical_or_expression
   54                      | unary_expression assignment_operator assignment_expression

   55 assignment_operator: '='
   56                    | MUL_ASSIGN
   57                    | DIV_ASSIGN
   58                    | MOD_ASSIGN
   59                    | ADD_ASSIGN
   60                    | SUB_ASSIGN
   61                    | LEFT_ASSIGN
   62                    | RIGHT_ASSIGN
   63                    | AND_ASSIGN
   64                    | XOR_ASSIGN
   65                    | OR_ASSIGN

   66 expression: assignment_expression
   67           | expression ',' assignment_expression

   68 declaration: type_specifier ';'
   69            | type_specifier init_declarator_list ';'

   70 init_declarator_list: init_declarator
   71                     | init_declarator_list ',' init_declarator

   72 init_declarator: declarator
   73                | declarator '=' initializer

   74 type_specifier: VOID
   75               | CHAR
   76               | INT
   77               | DOUBLE
   78               | BOOL

   79 declarator: IDENTIFIER
   80           | '(' declarator ')'
   81           | declarator '[' assignment_expression ']'
   82           | declarator '[' '*' ']'
   83           | declarator '[' ']'
   84           | declarator '(' parameter_list ')'
   85           | declarator '(' identifier_list ')'
   86           | declarator '(' ')'

   87 parameter_list: parameter_declaration
   88               | parameter_list ',' parameter_declaration

   89 parameter_declaration: type_specifier declarator
   90                      | type_specifier abstract_declarator
   91                      | type_specifier

   92 identifier_list: IDENTIFIER
   93                | identifier_list ',' IDENTIFIER

   94 abstract_declarator: '(' abstract_declarator ')'
   95                    | '[' ']'
   96                    | '[' assignment_expression ']'
   97                    | abstract_declarator '[' ']'
   98                    | abstract_declarator '[' assignment_expression ']'
   99                    | '[' '*' ']'
  100                    | abstract_declarator '[' '*' ']'
  101                    | '(' ')'
  102                    | '(' parameter_list ')'
  103                    | abstract_declarator '(' ')'
  104                    | abstract_declarator '(' parameter_list ')'

  105 initializer: assignment_expression
  106            | '{' initializer_list '}'
  107            | '{' initializer_list ',' '}'

  108 initializer_list: initializer
  109                 | designation initializer
  110                 | initializer_list ',' initializer
  111                 | initializer_list ',' designation initializer

  112 designation: designator_list '='

  113 designator_list: designator
  114                | designator_list designator

  115 designator: '[' logical_or_expression ']'
  116           | '.' IDENTIFIER

  117 statement: labeled_statement
  118          | compound_statement
  119          | expression_statement
  120          | selection_statement
  121          | iteration_statement
  122          | jump_statement

  123 labeled_statement: IDENTIFIER ':' statement
  124                  | CASE logical_or_expression ':' statement

  125 compound_statement: '{' '}'
  126                   | '{' block_item_list '}'

  127 block_item_list: block_item
  128                | block_item_list block_item

  129 block_item: declaration
  130           | statement

  131 expression_statement: ';'
  132                     | expression ';'

  133 selection_statement: IF '(' expression ')' statement
  134                    | IF '(' expression ')' statement ELSE statement
  135                    | SWITCH '(' expression ')' statement

  136 iteration_statement: WHILE '(' expression ')' statement
  137                    | DO statement WHILE '(' expression ')' ';'
  138                    | FOR '(' expression_statement expression_statement ')' statement
  139                    | FOR '(' expression_statement expression_statement expression ')' statement
  140                    | FOR '(' declaration expression_statement ')' statement
  141                    | FOR '(' declaration expression_statement expression ')' statement

  142 jump_statement: GOTO IDENTIFIER ';'
  143               | CONTINUE ';'
  144               | BREAK ';'
  145               | RETURN ';'
  146               | RETURN expression ';'

  147 translation_unit: external_declaration
  148                 | translation_unit external_declaration

  149 external_declaration: function_definition
  150                     | declaration

  151 function_definition: type_specifier declarator declaration_list compound_statement
  152                    | type_specifier declarator compound_statement

  153 declaration_list: declaration
  154                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 23
'$' (36) 24
'%' (37) 28
'&' (38) 44
'(' (40) 7 10 11 80 84 85 86 94 101 102 103 104 133 134 135 136 137
    138 139 140 141
')' (41) 7 10 11 80 84 85 86 94 101 102 103 104 133 134 135 136 137
    138 139 140 141
'*' (42) 26 82 99 100
'+' (43) 20 30
',' (44) 15 67 71 88 93 107 110 111
'-' (45) 21 31
'.' (46) 116
'/' (47) 27
':' (58) 123 124
';' (59) 68 69 131 132 137 142 143 144 145 146
'<' (60) 36
'=' (61) 55 73 112
'>' (62) 37
'?' (63)
'[' (91) 9 81 82 83 95 96 97 98 99 100 115
']' (93) 9 81 82 83 95 96 97 98 99 100 115
'^' (94) 46
'{' (123) 106 107 125 126
'|' (124) 48
'}' (125) 106 107 125 126
'~' (126) 22
error (256)
IDENTIFIER (258) 2 79 92 93 116 123 142
CONSTANT (259)
STRING_LITERAL (260)
SIZEOF (261)
CONSTANT_INT (262) 5
CONSTANT_DOUBLE (263) 6
PTR_OP (264)
INC_OP (265) 12 17
DEC_OP (266) 13 18
LEFT_OP (267) 33
RIGHT_OP (268) 34
LE_OP (269) 38
GE_OP (270) 39
EQ_OP (271) 41
NE_OP (272) 42
AND_OP (273) 50
OR_OP (274) 52
MUL_ASSIGN (275) 56
DIV_ASSIGN (276) 57
MOD_ASSIGN (277) 58
ADD_ASSIGN (278) 59
SUB_ASSIGN (279) 60
LEFT_ASSIGN (280) 61
RIGHT_ASSIGN (281) 62
AND_ASSIGN (282) 63
XOR_ASSIGN (283) 64
OR_ASSIGN (284) 65
TYPE_NAME (285)
CHAR (286) 75
INT (287) 76
DOUBLE (288) 77
VOID (289) 74
BOOL (290) 78
CASE (291) 124
IF (292) 133 134
ELSE (293) 134
SWITCH (294) 135
WHILE (295) 136 137
DO (296) 137
FOR (297) 138 139 140 141
GOTO (298) 142
CONTINUE (299) 143
BREAK (300) 144
RETURN (301) 145 146
TRUE (302) 3
FALSE (303) 4
LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
Program (76)
    on left: 1, on right: 0
primary_expression (77)
    on left: 2 3 4 5 6 7, on right: 8
postfix_expression (78)
    on left: 8 9 10 11 12 13, on right: 9 10 11 12 13 16
argument_expression_list (79)
    on left: 14 15, on right: 11 15
unary_expression (80)
    on left: 16 17 18 19, on right: 17 18 19 25 26 27 28 54
unary_operator (81)
    on left: 20 21 22 23 24, on right: 19
multiplicative_expression (82)
    on left: 25 26 27 28, on right: 26 27 28 29 30 31
additive_expression (83)
    on left: 29 30 31, on right: 30 31 32 33 34
shift_expression (84)
    on left: 32 33 34, on right: 33 34 35 36 37 38 39
relational_expression (85)
    on left: 35 36 37 38 39, on right: 36 37 38 39 40 41 42
equality_expression (86)
    on left: 40 41 42, on right: 41 42 43 44
and_expression (87)
    on left: 43 44, on right: 44 45 46
exclusive_or_expression (88)
    on left: 45 46, on right: 46 47 48
inclusive_or_expression (89)
    on left: 47 48, on right: 48 49 50
logical_and_expression (90)
    on left: 49 50, on right: 50 51 52
logical_or_expression (91)
    on left: 51 52, on right: 52 53 115 124
assignment_expression (92)
    on left: 53 54, on right: 14 15 54 66 67 81 96 98 105
assignment_operator (93)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 54
expression (94)
    on left: 66 67, on right: 7 9 67 132 133 134 135 136 137 139 141
    146
declaration (95)
    on left: 68 69, on right: 129 140 141 150 153 154
init_declarator_list (96)
    on left: 70 71, on right: 69 71
init_declarator (97)
    on left: 72 73, on right: 70 71
type_specifier (98)
    on left: 74 75 76 77 78, on right: 68 69 89 90 91 151 152
declarator (99)
    on left: 79 80 81 82 83 84 85 86, on right: 72 73 80 81 82 83 84
    85 86 89 151 152
parameter_list (100)
    on left: 87 88, on right: 84 88 102 104
parameter_declaration (101)
    on left: 89 90 91, on right: 87 88
identifier_list (102)
    on left: 92 93, on right: 85 93
abstract_declarator (103)
    on left: 94 95 96 97 98 99 100 101 102 103 104, on right: 90 94
    97 98 100 103 104
initializer (104)
    on left: 105 106 107, on right: 73 108 109 110 111
initializer_list (105)
    on left: 108 109 110 111, on right: 106 107 110 111
designation (106)
    on left: 112, on right: 109 111
designator_list (107)
    on left: 113 114, on right: 112 114
designator (108)
    on left: 115 116, on right: 113 114
statement (109)
    on left: 117 118 119 120 121 122, on right: 123 124 130 133 134
    135 136 137 138 139 140 141
labeled_statement (110)
    on left: 123 124, on right: 117
compound_statement (111)
    on left: 125 126, on right: 118 151 152
block_item_list (112)
    on left: 127 128, on right: 126 128
block_item (113)
    on left: 129 130, on right: 127 128
expression_statement (114)
    on left: 131 132, on right: 119 138 139 140 141
selection_statement (115)
    on left: 133 134 135, on right: 120
iteration_statement (116)
    on left: 136 137 138 139 140 141, on right: 121
jump_statement (117)
    on left: 142 143 144 145 146, on right: 122
translation_unit (118)
    on left: 147 148, on right: 1 148
external_declaration (119)
    on left: 149 150, on right: 147 148
function_definition (120)
    on left: 151 152, on right: 149
declaration_list (121)
    on left: 153 154, on right: 151 154


state 0

    0 $accept: . Program $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    Program               go to state 6
    declaration           go to state 7
    type_specifier        go to state 8
    translation_unit      go to state 9
    external_declaration  go to state 10
    function_definition   go to state 11


state 1

   75 type_specifier: CHAR .

    $default  reduce using rule 75 (type_specifier)


state 2

   76 type_specifier: INT .

    $default  reduce using rule 76 (type_specifier)


state 3

   77 type_specifier: DOUBLE .

    $default  reduce using rule 77 (type_specifier)


state 4

   74 type_specifier: VOID .

    $default  reduce using rule 74 (type_specifier)


state 5

   78 type_specifier: BOOL .

    $default  reduce using rule 78 (type_specifier)


state 6

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 7

  150 external_declaration: declaration .

    $default  reduce using rule 150 (external_declaration)


state 8

   68 declaration: type_specifier . ';'
   69            | type_specifier . init_declarator_list ';'
  151 function_definition: type_specifier . declarator declaration_list compound_statement
  152                    | type_specifier . declarator compound_statement

    IDENTIFIER  shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15

    init_declarator_list  go to state 16
    init_declarator       go to state 17
    declarator            go to state 18


state 9

    1 Program: translation_unit .
  148 translation_unit: translation_unit . external_declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 1 (Program)

    declaration           go to state 7
    type_specifier        go to state 8
    external_declaration  go to state 19
    function_definition   go to state 11


state 10

  147 translation_unit: external_declaration .

    $default  reduce using rule 147 (translation_unit)


state 11

  149 external_declaration: function_definition .

    $default  reduce using rule 149 (external_declaration)


state 12

    0 $accept: Program $end .

    $default  accept


state 13

   79 declarator: IDENTIFIER .

    $default  reduce using rule 79 (declarator)


state 14

   68 declaration: type_specifier ';' .

    $default  reduce using rule 68 (declaration)


state 15

   80 declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 13
    '('         shift, and go to state 15

    declarator  go to state 20


state 16

   69 declaration: type_specifier init_declarator_list . ';'
   71 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 21
    ','  shift, and go to state 22


state 17

   70 init_declarator_list: init_declarator .

    $default  reduce using rule 70 (init_declarator_list)


state 18

   72 init_declarator: declarator .
   73                | declarator . '=' initializer
   81 declarator: declarator . '[' assignment_expression ']'
   82           | declarator . '[' '*' ']'
   83           | declarator . '[' ']'
   84           | declarator . '(' parameter_list ')'
   85           | declarator . '(' identifier_list ')'
   86           | declarator . '(' ')'
  151 function_definition: type_specifier declarator . declaration_list compound_statement
  152                    | type_specifier declarator . compound_statement

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    '='     shift, and go to state 23
    '['     shift, and go to state 24
    '{'     shift, and go to state 25
    '('     shift, and go to state 26

    $default  reduce using rule 72 (init_declarator)

    declaration         go to state 27
    type_specifier      go to state 28
    compound_statement  go to state 29
    declaration_list    go to state 30


state 19

  148 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 148 (translation_unit)


state 20

   80 declarator: '(' declarator . ')'
   81           | declarator . '[' assignment_expression ']'
   82           | declarator . '[' '*' ']'
   83           | declarator . '[' ']'
   84           | declarator . '(' parameter_list ')'
   85           | declarator . '(' identifier_list ')'
   86           | declarator . '(' ')'

    '['  shift, and go to state 24
    '('  shift, and go to state 26
    ')'  shift, and go to state 31


state 21

   69 declaration: type_specifier init_declarator_list ';' .

    $default  reduce using rule 69 (declaration)


state 22

   71 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 13
    '('         shift, and go to state 15

    init_declarator  go to state 32
    declarator       go to state 33


state 23

   73 init_declarator: declarator '=' . initializer

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '{'              shift, and go to state 45
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression         go to state 48
    postfix_expression         go to state 49
    unary_expression           go to state 50
    unary_operator             go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    assignment_expression      go to state 62
    initializer                go to state 63


state 24

   81 declarator: declarator '[' . assignment_expression ']'
   82           | declarator '[' . '*' ']'
   83           | declarator '[' . ']'

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    ']'              shift, and go to state 64
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '*'              shift, and go to state 65
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression         go to state 48
    postfix_expression         go to state 49
    unary_expression           go to state 50
    unary_operator             go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    assignment_expression      go to state 66


state 25

  125 compound_statement: '{' . '}'
  126                   | '{' . block_item_list '}'

    IDENTIFIER       shift, and go to state 67
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    CHAR             shift, and go to state 1
    INT              shift, and go to state 2
    DOUBLE           shift, and go to state 3
    VOID             shift, and go to state 4
    BOOL             shift, and go to state 5
    CASE             shift, and go to state 68
    IF               shift, and go to state 69
    SWITCH           shift, and go to state 70
    WHILE            shift, and go to state 71
    DO               shift, and go to state 72
    FOR              shift, and go to state 73
    GOTO             shift, and go to state 74
    CONTINUE         shift, and go to state 75
    BREAK            shift, and go to state 76
    RETURN           shift, and go to state 77
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    ';'              shift, and go to state 78
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '{'              shift, and go to state 25
    '}'              shift, and go to state 79
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression         go to state 48
    postfix_expression         go to state 49
    unary_expression           go to state 50
    unary_operator             go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    assignment_expression      go to state 80
    expression                 go to state 81
    declaration                go to state 82
    type_specifier             go to state 28
    statement                  go to state 83
    labeled_statement          go to state 84
    compound_statement         go to state 85
    block_item_list            go to state 86
    block_item                 go to state 87
    expression_statement       go to state 88
    selection_statement        go to state 89
    iteration_statement        go to state 90
    jump_statement             go to state 91


state 26

   84 declarator: declarator '(' . parameter_list ')'
   85           | declarator '(' . identifier_list ')'
   86           | declarator '(' . ')'

    IDENTIFIER  shift, and go to state 92
    CHAR        shift, and go to state 1
    INT         shift, and go to state 2
    DOUBLE      shift, and go to state 3
    VOID        shift, and go to state 4
    BOOL        shift, and go to state 5
    ')'         shift, and go to state 93

    type_specifier         go to state 94
    parameter_list         go to state 95
    parameter_declaration  go to state 96
    identifier_list        go to state 97


state 27

  153 declaration_list: declaration .

    $default  reduce using rule 153 (declaration_list)


state 28

   68 declaration: type_specifier . ';'
   69            | type_specifier . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15

    init_declarator_list  go to state 16
    init_declarator       go to state 17
    declarator            go to state 33


state 29

  152 function_definition: type_specifier declarator compound_statement .

    $default  reduce using rule 152 (function_definition)


state 30

  151 function_definition: type_specifier declarator declaration_list . compound_statement
  154 declaration_list: declaration_list . declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    '{'     shift, and go to state 25

    declaration         go to state 98
    type_specifier      go to state 28
    compound_statement  go to state 99


state 31

   80 declarator: '(' declarator ')' .

    $default  reduce using rule 80 (declarator)


state 32

   71 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 71 (init_declarator_list)


state 33

   72 init_declarator: declarator .
   73                | declarator . '=' initializer
   81 declarator: declarator . '[' assignment_expression ']'
   82           | declarator . '[' '*' ']'
   83           | declarator . '[' ']'
   84           | declarator . '(' parameter_list ')'
   85           | declarator . '(' identifier_list ')'
   86           | declarator . '(' ')'

    '='  shift, and go to state 23
    '['  shift, and go to state 24
    '('  shift, and go to state 26

    $default  reduce using rule 72 (init_declarator)


state 34

    2 primary_expression: IDENTIFIER .

    $default  reduce using rule 2 (primary_expression)


state 35

    5 primary_expression: CONSTANT_INT .

    $default  reduce using rule 5 (primary_expression)


state 36

    6 primary_expression: CONSTANT_DOUBLE .

    $default  reduce using rule 6 (primary_expression)


state 37

   17 unary_expression: INC_OP . unary_expression

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression  go to state 48
    postfix_expression  go to state 49
    unary_expression    go to state 100
    unary_operator      go to state 51


state 38

   18 unary_expression: DEC_OP . unary_expression

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression  go to state 48
    postfix_expression  go to state 49
    unary_expression    go to state 101
    unary_operator      go to state 51


state 39

    3 primary_expression: TRUE .

    $default  reduce using rule 3 (primary_expression)


state 40

    4 primary_expression: FALSE .

    $default  reduce using rule 4 (primary_expression)


state 41

   23 unary_operator: '!' .

    $default  reduce using rule 23 (unary_operator)


state 42

   22 unary_operator: '~' .

    $default  reduce using rule 22 (unary_operator)


state 43

   21 unary_operator: '-' .

    $default  reduce using rule 21 (unary_operator)


state 44

   20 unary_operator: '+' .

    $default  reduce using rule 20 (unary_operator)


state 45

  106 initializer: '{' . initializer_list '}'
  107            | '{' . initializer_list ',' '}'

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '['              shift, and go to state 102
    '.'              shift, and go to state 103
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '{'              shift, and go to state 45
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression         go to state 48
    postfix_expression         go to state 49
    unary_expression           go to state 50
    unary_operator             go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    assignment_expression      go to state 62
    initializer                go to state 104
    initializer_list           go to state 105
    designation                go to state 106
    designator_list            go to state 107
    designator                 go to state 108


state 46

    7 primary_expression: '(' . expression ')'

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression         go to state 48
    postfix_expression         go to state 49
    unary_expression           go to state 50
    unary_operator             go to state 51
    multiplicative_expression  go to state 52
    additive_expression        go to state 53
    shift_expression           go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    and_expression             go to state 57
    exclusive_or_expression    go to state 58
    inclusive_or_expression    go to state 59
    logical_and_expression     go to state 60
    logical_or_expression      go to state 61
    assignment_expression      go to state 80
    expression                 go to state 109


state 47

   24 unary_operator: '$' .

    $default  reduce using rule 24 (unary_operator)


state 48

    8 postfix_expression: primary_expression .

    $default  reduce using rule 8 (postfix_expression)


state 49

    9 postfix_expression: postfix_expression . '[' expression ']'
   10                   | postfix_expression . '(' ')'
   11                   | postfix_expression . '(' argument_expression_list ')'
   12                   | postfix_expression . INC_OP
   13                   | postfix_expression . DEC_OP
   16 unary_expression: postfix_expression .

    INC_OP  shift, and go to state 110
    DEC_OP  shift, and go to state 111
    '['     shift, and go to state 112
    '('     shift, and go to state 113

    $default  reduce using rule 16 (unary_expression)


state 50

   25 multiplicative_expression: unary_expression .
   54 assignment_expression: unary_expression . assignment_operator assignment_expression

    MUL_ASSIGN    shift, and go to state 114
    DIV_ASSIGN    shift, and go to state 115
    MOD_ASSIGN    shift, and go to state 116
    ADD_ASSIGN    shift, and go to state 117
    SUB_ASSIGN    shift, and go to state 118
    LEFT_ASSIGN   shift, and go to state 119
    RIGHT_ASSIGN  shift, and go to state 120
    AND_ASSIGN    shift, and go to state 121
    XOR_ASSIGN    shift, and go to state 122
    OR_ASSIGN     shift, and go to state 123
    '='           shift, and go to state 124

    $default  reduce using rule 25 (multiplicative_expression)

    assignment_operator  go to state 125


state 51

   19 unary_expression: unary_operator . unary_expression

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46
    '$'              shift, and go to state 47

    primary_expression  go to state 48
    postfix_expression  go to state 49
    unary_expression    go to state 126
    unary_operator      go to state 51


state 52

   26 multiplicative_expression: multiplicative_expression . '*' unary_expression
   27                          | multiplicative_expression . '/' unary_expression
   28                          | multiplicative_expression . '%' unary_expression
   29 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 127
    '/'  shift, and go to state 128
    '%'  shift, and go to state 129

    $default  reduce using rule 29 (additive_expression)


state 53

   30 additive_expression: additive_expression . '+' multiplicative_expression
   31                    | additive_expression . '-' multiplicative_expression
   32 shift_expression: additive_expression .

    '-'  shift, and go to state 130
    '+'  shift, and go to state 131

    $default  reduce using rule 32 (shift_expression)


state 54

   33 shift_expression: shift_expression . LEFT_OP additive_expression
   34                 | shift_expression . RIGHT_OP additive_expression
   35 relational_expression: shift_expression .

    LEFT_OP   shift, and go to state 132
    RIGHT_OP  shift, and go to state 133

    $default  reduce using rule 35 (relational_expression)


state 55

   36 relational_expression: relational_expression . '<' shift_expression
   37                      | relational_expression . '>' shift_expression
   38                      | relational_expression . LE_OP shift_expression
   39                      | relational_expression . GE_OP shift_expression
   40 equality_expression: relational_expression .

    LE_OP  shift, and go to state 134
    GE_OP  shift, and go to state 135
    '<'    shift, and go to state 136
    '>'    shift, and go to state 137

    $default  reduce using rule 40 (equality_expression)


state 56

   41 equality_expression: equality_expression . EQ_OP relational_expression
   42                    | equality_expression . NE_OP relational_expression
   43 and_expression: equality_expression .

    EQ_OP  shift, and go to state 138
    NE_OP  shift, and go to state 139

    $default  reduce using rule 43 (and_expression)


state 57

   44 and_expression: and_expression . '&' equality_expression
   45 exclusive_or_expression: and_expression .

    '&'  shift, and go to state 140

    $default  reduce using rule 45 (exclusive_or_expression)


state 58

   46 exclusive_or_expression: exclusive_or_expression . '^' and_expression
   47 inclusive_or_expression: exclusive_or_expression .

    '^'  shift, and go to state 141

    $default  reduce using rule 47 (inclusive_or_expression)


state 59

   48 inclusive_or_expression: inclusive_or_expression . '|' exclusive_or_expression
   49 logical_and_expression: inclusive_or_expression .

    '|'  shift, and go to state 142

    $default  reduce using rule 49 (logical_and_expression)


state 60

   50 logical_and_expression: logical_and_expression . AND_OP inclusive_or_expression
   51 logical_or_expression: logical_and_expression .

    AND_OP  shift, and go to state 143

    $default  reduce using rule 51 (logical_or_expression)


state 61

   52 logical_or_expression: logical_or_expression . OR_OP logical_and_expression
   53 assignment_expression: logical_or_expression .

    OR_OP  shift, and go to state 144

    $default  reduce using rule 53 (assignment_expression)


state 62

  105 initializer: assignment_expression .

    $default  reduce using rule 105 (initializer)


state 63

   73 init_declarator: declarator '=' initializer .

    $default  reduce using rule 73 (init_declarator)


state 64

   83 declarator: declarator '[' ']' .

    $default  reduce using rule 83 (declarator)


state 65

   82 declarator: declarator '[' '*' . ']'

    ']'  shift, and go to state 145


state 66

   81 declarator: declarator '[' assignment_expression . ']'

    ']'  shift, and go to state 146


state 67

    2 primary_expression: IDENTIFIER .
  123 labeled_statement: IDENTIFIER . ':' statement

    ':'  shift, and go to state 147

    $default  reduce using rule 2 (primary_expression)


state 68

  124 labeled_statement: CASE . logical_or_expression ':' statement

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46
    '$'              shift, and go to state 47
